# dunnart

./: .gitignore  CMakeLists.txt  README.md
libavoid/: CMakeLists.txt  actioninfo.h  connector.cpp  connector.h  geometry.h  geomtypes.cpp  graph.h  hyperedgeimprover.cpp  obstacle.h  orthogonal.cpp  router.cpp  router.h  scanline.h  vertices.cpp  vertices.h
libcola/: CMakeLists.txt  box.cpp  cc_nonoverlapconstraints.cpp  cluster.cpp  cola.cpp  colafd.cpp  compound_constraints.cpp  conjugate_gradient.cpp  connected_components.cpp  convex_hull.cpp  gradient_projection.cpp  output_svg.cpp  pseudorandom.cpp  shortest_paths.h  straightener.cpp  straightener.h
libdunnartcanvas/: CMakeLists.txt  canvas.cpp  cluster.cpp  connector.cpp  githash.h  gmlgraph.cpp  graphdata.cpp  graphdata.h  graphlayout.cpp  interferencegraph.cpp  polygon.cpp  stronglyconnectedcomponents.cpp  template-constraints.cpp  textshape.cpp  visibility.cpp
libdunnartcanvas/qtpropertybrowser/: CMakeLists.txt
libogdf/: CMakeLists.txt
libogdf/ogdf/basic/: Graph.h  List.h
libogdf/ogdf/energybased/: StressMajorizationSimple.h
libogdf/ogdf/energybased/multilevelmixer/: IndependentSetMerger.h
libogdf/ogdf/graphalg/: MinimumCut.h
libogdf/ogdf/internal/basic/: MallocMemoryAllocator.h  PoolMemoryAllocator.h
libogdf/ogdf/layered/: OptimalHierarchyClusterLayout.h
libogdf/ogdf/planarity/: PlanRepInc.h
libogdf/src/basic/: BuildInfo.cpp  Licenser.cpp  random_hierarchy.cpp
libogdf/src/decomposition/: TricComp.cpp
libogdf/src/energybased/: FMEMultipoleKernel.cpp  FMEThread.cpp  SpringEmbedderKK.cpp  StressMajorizationSimple.cpp
libogdf/src/energybased/multilevelmixer/: CirclePlacer.cpp  RandomPlacer.cpp  ScalingLayout.cpp  SolarMerger.cpp
libogdf/src/fileformats/: GmlParser.cpp  OgmlParser.cpp  simple_graph_load.cpp
libogdf/src/graphalg/: ConvexHull.cpp
libogdf/src/incremental/: SimpleIncNodeInserter.cpp
libogdf/src/layered/: FastHierarchyLayout.cpp  HierarchyLayoutModule.cpp  sugiyama-cluster.cpp  sugiyama.cpp
libogdf/src/lpsolver/: alps_debug.cpp  alps_loadproblem.cpp  alps_lpread.cpp  alps_optimize.cpp  alps_readbasis.cpp
libtopology/: CMakeLists.txt  cola_topology_addon.cpp  compute_forces.cpp  orthogonal_topology.cpp  resize.cpp  topology_graph.cpp  topology_graph.h
libvpsc/: CMakeLists.txt  rectangle.cpp  rectangle.h
plugins/: CMakeLists.txt
